Fix #103571: Force field absorption for rigid bodies.